--- a/assets/array_hera.qmd
+++ b/assets/array_hera.qmd
@@ -80,7 +80,7 @@ if(!file.exists(file.path(proj_dir, "examples", "hera", "array_lm", "inputs", "h
 
 6. Compress the entire `array_lm/` directory as a tar.gz file `upload.array_lm.tar.gz`. This simplifies the number of steps needed for file transfers.
 ```{r}
-shell(paste0("powershell cd ", file.path(proj_dir, "examples", "hera", "array_lm", "inputs"), ";tar -czf upload.array_lm.tar.gz array_lm "))
+shell(paste0("powershell cd ", file.path(proj_dir, "examples", "hera", "array_lm"), ";tar -czf upload.array_lm.tar.gz array_lm "))
 ```
 
 ## Hera workflow
@@ -110,7 +110,7 @@ mkdir logs/
 
 3. Transfer files  
 
-Open a second PowerShell terminal in the `noaa-hpc-hera` directory on your machine. This will be your local workstation, call it *Terminal B*. Use this terminal window to upload via *scp* the needed files (`examples/hera/array_lm/inputs/upload.array_lm.tar.gz` and `examples/hera/array_lm/slurm_scripts/submit_array_lm.sh`) to Hera. The `upload.array_lm.tar.gz` will be uploaded to your directory within the project directory on `scratch1` and the submit script `submit_array_lm.sh` will be uploaded to the `submit_scripts` directory. Make sure your VPN is active when attempting to upload using the [DTN](https://github.com/N-DucharmeBarth-NOAA/noaa-hpc-hera/blob/main/documentation/hera_doc.qmd). You will be prompted for your RSA passcode after each *scp* command.
+Open a second PowerShell terminal in the `NSASS-HTC-HPC-Computing` directory on your machine. This will be your local workstation, call it *Terminal B*. Use this terminal window to upload via *scp* the needed files (`examples/hera/array_lm/upload.array_lm.tar.gz` and `examples/hera/array_lm/slurm_scripts/submit_array_lm.sh`) to Hera. The `upload.array_lm.tar.gz` will be uploaded to your directory within the project directory on `scratch1` and the submit script `submit_array_lm.sh` will be uploaded to the `submit_scripts` directory. Make sure your VPN is active when attempting to upload using the [DTN](https://github.com/N-DucharmeBarth-NOAA/noaa-hpc-hera/blob/main/documentation/hera_doc.qmd). You will be prompted for your RSA passcode after each *scp* command.
 
 ```{bash}
 scp examples/hera/array_lm/inputs/upload.array_lm.tar.gz User.Name@dtn-hera.fairmont.rdhpcs.noaa.gov:/scratch1/Project/Name/User.Name
@@ -120,15 +120,15 @@ scp examples/hera/array_lm/inputs/upload.array_lm.tar.gz User.Name@dtn-hera.fair
 ### Coding alert!
 In `submit_array_lm.sh` you will need to change the following before you upload and run the script:
 
-1. Line 5: change account name to the name of your project. If you are using the NOAA htc4sa project, it would be htc4sa.
+1. Line 5: change account `name` to the name of your project. If you are using the NOAA htc4sa project, it would be `htc4sa`.
 
 2. Line 9: `/scratch1/Project/Name/User.Name/logs/` to the location you created for `logs/` above.
 
 3. Line 10: Change to **your** email address.
 
-4. Line 24: Make sure that this line points to the location on Hera that you uploaded `hera_job_directories.txt` to. `hera_job_directories.txt` is located in the `examples/hera/array_lm/inputs` directory that was uploaded as a part of `upload.array_lm.tar.gz`.
+4. Line 24: Make sure that this line points to the location on Hera that you uploaded `hera_job_directories.txt` to. `hera_job_directories.txt` is located in the `array_lm/inputs` directory that was uploaded as a part of `upload.array_lm.tar.gz`.
 
-5. Line 37: Make sure that this line points to the location on Hera that you uploaded `run_lm_hera_array.r` to. `run_lm_hera_array.r` is located in the `examples/hera/array_lm/inputs` directory that was uploaded as a part of `upload.array_lm.tar.gz`. 
+5. Line 37: Make sure that this line points to the location on Hera that you uploaded `run_lm_hera_array.r` to. `run_lm_hera_array.r` is located in the `array_lm/inputs` directory that was uploaded as a part of `upload.array_lm.tar.gz`. 
 :::
 
 ```{bash}
@@ -144,13 +144,13 @@ tar -xzf upload.array_lm.tar.gz
 
 Make sure files that will be read/executed have unix line endings:
 ```{bash}
-dos2unix array_lm/inputs/run_lm_hera_array.r array_lm/hera_job_directories.txt array_lm/slurm_scripts/submit_array_lm.sh
+dos2unix array_lm/inputs/run_lm_hera_array.r array_lm/inputs/hera_job_directories.txt array_lm/slurm_scripts/submit_array_lm.sh
 ```
 6. Submit job  
 
 Now you are ready to submit the SLURM [submission script](https://github.com/N-DucharmeBarth-NOAA/noaa-hpc-hera/blob/main/example_slurm_scripts/submit_array_simple_r_v2.sh) `submit_array_lm.sh`.
 ```{bash}
-sbatch submit_scripts/submit_array_lm.sh
+sbatch array_lm/slurm_scripts/submit_array_lm.sh
 ```
 As part of this job script, it cleans the directories specified in `hera_job_directories.txt` of the input file `data.csv`. The output is a compressed *tar.gz* containing the output produced by `run_lm_hera_array.r` (`par.csv`) and `runtime.txt` which logs the job start, end, and runtime. You can check your job status using `squeue` but this job should complete in a few seconds.
 ```{bash}
