make project_name consistent with hera doc

--- a/assets/array_hera.qmd
+++ b/assets/array_hera.qmd
@@ -24,7 +24,7 @@ The *hera/array_lm* example can be set-up either by cloning the repository `git 
 
 ::: {.callout-important}
 # Coding alert!
-Note: throughout this tutorial we are using **User.Name** as a stand-in for your actual username and **Project/Name** as a stand-in for your project. In all cases, replace **User.Name** your actual user name and **Project/Name** with your specific project name. 
+Note: throughout this tutorial we are using **User.Name** as a stand-in for your actual username and **NMFS/project_name** as a stand-in for your project. In all cases, replace **User.Name** your actual user name and **NMFS/project_name** with your specific project name. 
 :::
 
 ## Setup data inputs and directories
@@ -34,7 +34,7 @@ Note: throughout this tutorial we are using **User.Name** as a stand-in for your
 ```{r}
 #| eval: true
 proj_dir = this.path::this.proj()
-hera_project = "Project/Name/User.Name/"
+hera_project = "NMFS/project_name/User.Name/"
 ```
 
 2. Define directory names for each run.
@@ -98,7 +98,7 @@ ssh -m hmac-sha2-256-etm@openssh.com User.Name@hera-rsa.boulder.rdhpcs.noaa.gov 
 In *Terminal A* navigate to the project directory on `scratch1` and create some directories. If using a shared directory such as `htc4sa/`, make a directory to save your work within this directory (.e.g., `User.Name/`). Change your working directory to this directory. We will upload our SLURM [submit script](https://github.com/N-DucharmeBarth-NOAA/noaa-hpc-hera/blob/main/example_slurm_scripts/submit_array_simple_r_v2.sh) into `submit_scripts/` and write our SLURM log files to `logs/`.
 ```{bash}
 # navigate to project directory
-cd /scratch1/Project/Name/
+cd /scratch1/NMFS/project_name/
 # create new directory
 mkdir User.Name/
 # navigate into new directory
@@ -113,16 +113,16 @@ mkdir logs/
 Open a second PowerShell terminal in the `NSASS-HTC-HPC-Computing` directory on your machine. This will be your local workstation, call it *Terminal B*. Use this terminal window to upload via *scp* the needed files (`examples/hera/array_lm/upload.array_lm.tar.gz` and `examples/hera/array_lm/slurm_scripts/submit_array_lm.sh`) to Hera. The `upload.array_lm.tar.gz` will be uploaded to your directory within the project directory on `scratch1` and the submit script `submit_array_lm.sh` will be uploaded to the `submit_scripts` directory. Make sure your VPN is active when attempting to upload using the [DTN](https://github.com/N-DucharmeBarth-NOAA/noaa-hpc-hera/blob/main/documentation/hera_doc.qmd). You will be prompted for your RSA passcode after each *scp* command.
 
 ```{bash}
-scp examples/hera/array_lm/inputs/upload.array_lm.tar.gz User.Name@dtn-hera.fairmont.rdhpcs.noaa.gov:/scratch1/Project/Name/User.Name
+scp examples/hera/array_lm/inputs/upload.array_lm.tar.gz User.Name@dtn-hera.fairmont.rdhpcs.noaa.gov:/scratch1/NMFS/project_name/User.Name
 ```
 ::: {.callout-important}
 
 ### Coding alert!
 In `submit_array_lm.sh` you will need to change the following before you upload and run the script:
 
-1. Line 5: change account `name` to the name of your project. If you are using the NOAA htc4sa project, it would be `htc4sa`.
+1. Line 5: change account `project_name` to the name of your project. If you are using the NOAA htc4sa project, it would be `htc4sa`.
 
-2. Line 9: `/scratch1/Project/Name/User.Name/logs/` to the location you created for `logs/` above.
+2. Line 9: `/scratch1/NMFS/project_name/User.Name/logs/` to the location you created for `logs/` above.
 
 3. Line 10: Change to **your** email address.
 
@@ -132,7 +132,7 @@ In `submit_array_lm.sh` you will need to change the following before you upload 
 :::
 
 ```{bash}
-scp examples/hera/array_lm/slurm_scripts/submit_array_lm.sh User.Name@dtn-hera.fairmont.rdhpcs.noaa.gov:/scratch1/Project/Name/User.Name/submit_scripts/
+scp examples/hera/array_lm/slurm_scripts/submit_array_lm.sh User.Name@dtn-hera.fairmont.rdhpcs.noaa.gov:/scratch1/NMFS/project_name/User.Name/submit_scripts/
 ```
 4. Un-tar files  
 
@@ -168,7 +168,7 @@ dir.create(file.path(proj_dir, "examples", "hera", "array_lm", "output"), recurs
 ```
 Now you can use *scp* in *Terminal B* to download `download.array_lm.tar.gz` into `examples/hera/array_lm/output`
 ```{bash}
-scp User.Name@dtn-hera.fairmont.rdhpcs.noaa.gov:/scratch1/Project/Name/User.Name/download.array_lm.tar.gz examples/hera/array_lm/output/
+scp User.Name@dtn-hera.fairmont.rdhpcs.noaa.gov:/scratch1/NMFS/project_name/User.Name/download.array_lm.tar.gz examples/hera/array_lm/output/
 ```
 Move into `examples/hera/array_lm/output/` and untar downloaded results.
 ```{bash}
