--- a/assets/array_hera.qmd
+++ b/assets/array_hera.qmd
@@ -1,9 +1,11 @@
 ---
-title: "Working with NOAA HPC Hera"
+title: "Running an array job on Hera"
 date: last-modified
 date-format: iso
 published-title: "Last updated"
-author: Nicholas Ducharme-Barth
+author: 
+  - Nicholas Ducharme-Barth
+  - Megumi Oshima
 engine: knitr
 execute:
     eval: false
