--- a/assets/hera_documentation.qmd
+++ b/assets/hera_documentation.qmd
@@ -3,7 +3,9 @@ title: "Working with NOAA HPC Hera"
 date: last-modified
 date-format: iso
 published-title: "Last updated"
-author: Nicholas Ducharme-Barth
+author: 
+  - Nicholas Ducharme-Barth
+  - Megumi Oshima
 engine: knitr
 execute:
     eval: false
